--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-blue-500: oklch(0.623 0.214 259.815);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -216,6 +217,12 @@
   .my-auto {
     margin-block: auto;
   }
+  .mt-5 {
+    margin-top: calc(var(--spacing) * 5);
+  }
+  .mt-8 {
+    margin-top: calc(var(--spacing) * 8);
+  }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
@@ -225,11 +232,17 @@
   .mt-\[40px\] {
     margin-top: 40px;
   }
+  .mt-\[60px\] {
+    margin-top: 60px;
+  }
   .mt-\[62px\] {
     margin-top: 62px;
   }
   .mt-\[65px\] {
     margin-top: 65px;
+  }
+  .mt-\[100px\] {
+    margin-top: 100px;
   }
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
@@ -368,6 +381,12 @@
     --tw-translate-y: calc(100px * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
+  .scale-105 {
+    --tw-scale-x: 105%;
+    --tw-scale-y: 105%;
+    --tw-scale-z: 105%;
+    scale: var(--tw-scale-x) var(--tw-scale-y);
+  }
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
@@ -462,11 +481,17 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-blue-500 {
+    border-color: var(--color-blue-500);
+  }
   .bg-\[\#2B59C3\] {
     background-color: #2B59C3;
   }
   .bg-black {
     background-color: var(--color-black);
+  }
+  .bg-blue-500 {
+    background-color: var(--color-blue-500);
   }
   .bg-white {
     background-color: var(--color-white);
@@ -522,8 +547,14 @@
   .py-\[60px\] {
     padding-block: 60px;
   }
+  .text-center {
+    text-align: center;
+  }
   .text-end {
     text-align: end;
+  }
+  .text-start {
+    text-align: start;
   }
   .text-sm {
     font-size: var(--text-sm);
@@ -537,6 +568,9 @@
   }
   .text-\[18px\] {
     font-size: 18px;
+  }
+  .text-\[26px\] {
+    font-size: 26px;
   }
   .text-\[34px\] {
     font-size: 34px;
@@ -608,6 +642,16 @@
   .duration-200 {
     --tw-duration: 200ms;
     transition-duration: 200ms;
+  }
+  .hover\:scale-0 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 0%;
+        --tw-scale-y: 0%;
+        --tw-scale-z: 0%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
   }
   .hover\:scale-100 {
     &:hover {
@@ -907,6 +951,11 @@
       font-size: 15px;
     }
   }
+  .max-\[768px\]\:text-\[20px\] {
+    @media (width < 768px) {
+      font-size: 20px;
+    }
+  }
   .max-\[768px\]\:text-\[45px\] {
     @media (width < 768px) {
       font-size: 45px;
@@ -1143,6 +1192,21 @@ a, input, button {
   inherits: false;
   initial-value: 0;
 }
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
@@ -1280,19 +1344,4 @@ a, input, button {
 @property --tw-duration {
   syntax: "*";
   inherits: false;
-}
-@property --tw-scale-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
-}
-@property --tw-scale-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: 1;
 }
